<resources>
    <string name="app_name">UNC Charlotte Photos</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_gallery">Thumbnails Gallery</string>
    <string name="title_activity_image_viewer">Image Viewer</string>
    <string name="ifest_main_thumb">http://farm9.staticflickr.com/8054/8414075899_e87a74407b_m.jpg</string>
    <string name="commencement_main_thumb">http://farm9.staticflickr.com/8210/8277674769_7d1245dbf1_m.jpg</string>
    <string name="uncc_main_thumb">http://farm5.staticflickr.com/4113/4843614620_c541de5a5c_m.jpg</string>
    <string name="football_main_thumb">http://farm8.staticflickr.com/7265/8151547298_85e60e7368_m.jpg</string>
    <string name="label_uncc">UNC Charlotte</string>
    <string name="label_sports">Sports</string>
    <string name="label_ifest">Ifest</string>
    <string name="label_commencement">Commencement</string>
    <string-array name="ifest_thumbs">
        <item>http://farm9.staticflickr.com/8046/8414088019_3ffdf47308_s.jpg</item>
        <item>http://farm9.staticflickr.com/8083/8415182658_5402d77eeb_s.jpg</item>
        <item>http://farm9.staticflickr.com/8214/8415180106_4689befb39_s.jpg</item>
        <item>http://farm9.staticflickr.com/8095/8415178292_7921070d63_s.jpg</item>
        <item>http://farm9.staticflickr.com/8219/8414078543_5b3cda48b0_s.jpg</item>
        <item>http://farm9.staticflickr.com/8213/8414076689_ddea0c9aa3_s.jpg</item>
        <item>http://farm9.staticflickr.com/8224/8415169654_2cc59fc930_s.jpg</item>
        <item>http://farm9.staticflickr.com/8186/8414070243_b6edff6ffa_s.jpg</item>
        <item>http://farm9.staticflickr.com/8044/8414069441_3bdc762833_s.jpg</item>
        <item>http://farm9.staticflickr.com/8505/8415163570_26060444bd_s.jpg</item>
        <item>http://farm9.staticflickr.com/8075/8414064829_f5dc67353d_s.jpg</item>
        <item>http://farm9.staticflickr.com/8085/8415158312_d59f5b57c4_s.jpg</item>
        <item>http://farm9.staticflickr.com/8366/8414060179_a8b5ea617b_s.jpg</item>
        <item>http://farm9.staticflickr.com/8091/8415186470_8351b08eae_s.jpg</item>
        <item>http://farm8.staticflickr.com/7135/7510338754_f16c5e4915_s.jpg</item>
        <item>http://farm8.staticflickr.com/7262/7510325096_03e7de5963_s.jpg</item>
        <item>http://farm8.staticflickr.com/7263/7510290940_4d6e24c225_s.jpg</item>
        <item>http://farm8.staticflickr.com/7269/7510298860_03b8dcef02_s.jpg</item>
    </string-array>
    <string-array name="ifest_photos">
        <item>http://farm9.staticflickr.com/8046/8414088019_3ffdf47308_z.jpg</item>
        <item>http://farm9.staticflickr.com/8083/8415182658_5402d77eeb_z.jpg</item>
        <item>http://farm9.staticflickr.com/8214/8415180106_4689befb39_z.jpg</item>
        <item>http://farm9.staticflickr.com/8095/8415178292_7921070d63_z.jpg</item>
        <item>http://farm9.staticflickr.com/8219/8414078543_5b3cda48b0_z.jpg</item>
        <item>http://farm9.staticflickr.com/8213/8414076689_ddea0c9aa3_z.jpg</item>
        <item>http://farm9.staticflickr.com/8224/8415169654_2cc59fc930_z.jpg</item>
        <item>http://farm9.staticflickr.com/8186/8414070243_b6edff6ffa_z.jpg</item>
        <item>http://farm9.staticflickr.com/8044/8414069441_3bdc762833_z.jpg</item>
        <item>http://farm9.staticflickr.com/8505/8415163570_26060444bd_z.jpg</item>
        <item>http://farm9.staticflickr.com/8075/8414064829_f5dc67353d_z.jpg</item>
        <item>http://farm9.staticflickr.com/8085/8415158312_d59f5b57c4_z.jpg</item>
        <item>http://farm9.staticflickr.com/8366/8414060179_a8b5ea617b_z.jpg</item>
        <item>http://farm9.staticflickr.com/8091/8415186470_8351b08eae_z.jpg</item>
        <item>http://farm8.staticflickr.com/7135/7510338754_f16c5e4915_z.jpg</item>
        <item>http://farm8.staticflickr.com/7262/7510325096_03e7de5963_z.jpg</item>
        <item>http://farm8.staticflickr.com/7263/7510290940_4d6e24c225_z.jpg</item>
        <item>http://farm8.staticflickr.com/7269/7510298860_03b8dcef02_z.jpg</item>
    </string-array>
    <string-array name="commencement_thumbs">
        <item>http://farm9.staticflickr.com/8218/8278724118_9a28024cf5_s.jpg</item>
        <item>http://farm9.staticflickr.com/8340/8278724276_0878966c7f_s.jpg</item>
        <item>http://farm9.staticflickr.com/8206/8278724498_f2b19af0c5_s.jpg</item>
        <item>http://farm9.staticflickr.com/8197/8277668011_79dc35b94b_s.jpg</item>
        <item>http://farm9.staticflickr.com/8498/8277668433_ced3f5d265_s.jpg</item>
        <item>http://farm9.staticflickr.com/8081/8278725970_59b819c8af_s.jpg</item>
        <item>http://farm9.staticflickr.com/8207/8278726312_ba18511b9c_s.jpg</item>
        <item>http://farm9.staticflickr.com/8494/8277671619_2a923270dc_s.jpg</item>
        <item>http://farm9.staticflickr.com/8343/8278732498_514db12796_s.jpg</item>
        <item>http://farm9.staticflickr.com/8082/8277675595_9988ae6626_s.jpg</item>
        <item>http://farm9.staticflickr.com/8496/8278731112_68ce189c71_s.jpg</item>
        <item>http://farm9.staticflickr.com/8490/8277673995_769fb2a172_s.jpg</item>
        <item>http://farm9.staticflickr.com/8207/8277672903_d4c070da65_s.jpg</item>
        <item>http://farm9.staticflickr.com/8221/8278729170_85c05f72ff_s.jpg</item>
        <item>http://farm9.staticflickr.com/8211/8277672179_5860c1cbff_s.jpg</item>
    </string-array>
    <string-array name="commencement_photos">
        <item>http://farm9.staticflickr.com/8218/8278724118_9a28024cf5_z.jpg</item>
        <item>http://farm9.staticflickr.com/8340/8278724276_0878966c7f_z.jpg</item>
        <item>http://farm9.staticflickr.com/8206/8278724498_f2b19af0c5_z.jpg</item>
        <item>http://farm9.staticflickr.com/8197/8277668011_79dc35b94b_z.jpg</item>
        <item>http://farm9.staticflickr.com/8498/8277668433_ced3f5d265_z.jpg</item>
        <item>http://farm9.staticflickr.com/8081/8278725970_59b819c8af_z.jpg</item>
        <item>http://farm9.staticflickr.com/8207/8278726312_ba18511b9c_z.jpg</item>
        <item>http://farm9.staticflickr.com/8494/8277671619_2a923270dc_z.jpg</item>
        <item>http://farm9.staticflickr.com/8343/8278732498_514db12796_z.jpg</item>
        <item>http://farm9.staticflickr.com/8082/8277675595_9988ae6626_z.jpg</item>
        <item>http://farm9.staticflickr.com/8496/8278731112_68ce189c71_z.jpg</item>
        <item>http://farm9.staticflickr.com/8490/8277673995_769fb2a172_z.jpg</item>
        <item>http://farm9.staticflickr.com/8207/8277672903_d4c070da65_z.jpg</item>
        <item>http://farm9.staticflickr.com/8221/8278729170_85c05f72ff_z.jpg</item>
        <item>http://farm9.staticflickr.com/8211/8277672179_5860c1cbff_z.jpg</item>
    </string-array>
    <string-array name="football_thumbs">
        <item>http://farm9.staticflickr.com/8441/7882624916_5f62cb318f_s.jpg</item>
        <item>http://farm8.staticflickr.com/7262/7882624286_c842255e2f_s.jpg</item>
        <item>http://farm9.staticflickr.com/8200/8151532467_027587c9ab_s.jpg</item>
        <item>http://farm8.staticflickr.com/7108/8151557270_37e4749cbe_s.jpg</item>
        <item>http://farm8.staticflickr.com/7268/8151532971_3f54184028_s.jpg</item>
        <item>http://farm9.staticflickr.com/8347/8151522099_6d42819ecb_s.jpg</item>
        <item>http://farm9.staticflickr.com/8487/8151546580_6d81197a77_s.jpg</item>
        <item>http://farm8.staticflickr.com/7265/8151547298_85e60e7368_s.jpg</item>
        <item>http://farm8.staticflickr.com/7272/8151547718_6003d8d72d_s.jpg</item>
        <item>http://farm8.staticflickr.com/7106/8151547932_8401a28fbd_s.jpg</item>
        <item>http://farm9.staticflickr.com/8345/8151523939_2733ba2391_s.jpg</item>
        <item>http://farm8.staticflickr.com/7272/8151548700_e243772b53_s.jpg</item>
        <item>http://farm8.staticflickr.com/7271/8151549578_e2634d9fde_s.jpg</item>
        <item>http://farm9.staticflickr.com/8486/8151551916_2c887f20e6_s.jpg</item>
        <item>http://farm8.staticflickr.com/7109/8151552328_1aa2f83051_s.jpg</item>
    </string-array>
    <string-array name="football_photos">
        <item>http://farm9.staticflickr.com/8441/7882624916_5f62cb318f_z.jpg</item>
        <item>http://farm8.staticflickr.com/7262/7882624286_c842255e2f_z.jpg</item>
        <item>http://farm9.staticflickr.com/8200/8151532467_027587c9ab_z.jpg</item>
        <item>http://farm8.staticflickr.com/7108/8151557270_37e4749cbe_z.jpg</item>
        <item>http://farm8.staticflickr.com/7268/8151532971_3f54184028_z.jpg</item>
        <item>http://farm9.staticflickr.com/8347/8151522099_6d42819ecb_z.jpg</item>
        <item>http://farm9.staticflickr.com/8487/8151546580_6d81197a77_z.jpg</item>
        <item>http://farm8.staticflickr.com/7265/8151547298_85e60e7368_z.jpg</item>
        <item>http://farm8.staticflickr.com/7272/8151547718_6003d8d72d_z.jpg</item>
        <item>http://farm8.staticflickr.com/7106/8151547932_8401a28fbd_z.jpg</item>
        <item>http://farm9.staticflickr.com/8345/8151523939_2733ba2391_z.jpg</item>
        <item>http://farm8.staticflickr.com/7272/8151548700_e243772b53_z.jpg</item>
        <item>http://farm8.staticflickr.com/7271/8151549578_e2634d9fde_z.jpg</item>
        <item>http://farm9.staticflickr.com/8486/8151551916_2c887f20e6_z.jpg</item>
        <item>http://farm8.staticflickr.com/7109/8151552328_1aa2f83051_z.jpg</item>
    </string-array>
    <string name="uncc">UNC Charlotte</string>
    <string name="sports">Sports</string>
    <string name="ifest">Ifest</string>
    <string name="commencement">Commencement</string>
    <string name="exit">Exit</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
</resources>